@@ -177,6 +177,12 @@ if test -n "${with_target_subdir}"; then
     # Of the functions in $checkfuncs, newlib only has strerror.
     AC_DEFINE_NOAUTOHEADER(HAVE_STRERROR)
 
+    case "${host}" in
+      *-*-cygwin*)
+	AC_DEFINE(HAVE_SYS_ERRLIST)
+	;;
+    esac
+
     setobjs=yes
 
   fi
