@@ -1,3 +1,8 @@
+2001-08-17  Christopher Faylor <cgf@cygnus.com>
+
+	* configure.in: Always set HAVE_SYS_ERRLIST when targetting cygwin.
+	* configure: Regenerate.
+
 2001-08-16  Richard Henderson  <rth@redhat.com>
 
 	* hashtab.c (htab_hash_string): New.
